[package]
name = "rust_imageboard"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["tls", "json", "secrets"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.28.0"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
mime = "0.3"
